--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,6 +17,7 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
+        <td><%= image_tag movie.image.url(:small) %></td>
         <td><%= movie.title %></td>
         <td><%= movie.description %></td>
         <td><%= movie.movie_length %></td>
