--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,6 +18,7 @@
     <% @movies.each do |movie| %>
       <tr>
         <td><%= image_tag movie.image.url(:small) %></td>
+        <td><%= movie.image.url(:small) %></td>
         <td><%= movie.title %></td>
         <td><%= movie.description %></td>
         <td><%= movie.movie_length %></td>
