--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -58,7 +58,10 @@
 
 <script>
   $('.star-rating').raty({
-  path: '/assets/',
+  starOn: '<%= image_path('star-on.png') %>',
+  starOff: '<%= image_path('star-off.png') %>',
+  starHalf: '<%= image_path('start-half.png') %>',
+  path: '',
   readOnly: true,
   score: function() {
     return $(this).attr('data-score');
