--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-4">
       <%= image_tag @movie.image.url(:medium) %>
       <div class="star-rating" data-score= <%= @avg_review %> ></div>
-      <em><%= "#{@reviews.length}" %></em>
+      <em><%= "#{@reviews.length}" %> review(s)</em>
         <div class="table-responsive">
           <table class="table">
             <tbody>
