--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -25,7 +25,10 @@
 
 <script>
   $('#star-rating').raty({
-  path: '/assets/',
+  starOn: '<%= image_path('star-on.png') %>',
+  starOff: '<%= image_path('star-off.png') %>',
+  starHalf: '<%= image_path('start-half.png') %>',
+  path: '',
   scoreName: 'review[rating]'
   });
 </script>
