Add ability to search through TMDB API

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,3 +31,15 @@ body {
     badding-bottom: 8px
   }
 }
+
+p {
+  color: white
+}
+
+h1, h2, h3 {
+  color: white
+}
+
+label {
+  color: white
+}
