--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -13,27 +13,28 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :value => params[:title] %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :value => params[:description] %>
   </div>
   <div class="field">
     <%= f.label :movie_length %><br>
-    <%= f.text_field :movie_length %>
+    <%= f.text_field :movie_length, :value => params[:movie_length] %>
   </div>
   <div class="field">
     <%= f.label :director %><br>
-    <%= f.text_field :director %>
+    <%= f.text_field :director, :value => params[:director] %>
   </div>
   <div class="field">
     <%= f.label :rating %><br>
     <%= f.text_field :rating %>
   </div>
+  <p>Image URL:</p>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.file_field :image %>
+    <%= f.text_field :image, :value => params[:image] %>
   </div>
   <div class="actions">
     <%= f.submit %>
