Added form validation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,10 +36,14 @@ p {
   color: white
 }
 
-h1, h2, h3 {
+h1, h2, h3, li {
   color: white
 }
 
 label {
   color: white
+}
+
+.jumbotron p {
+  color: blue
 }
