--- a/app/views/movies/search.html.erb
+++ b/app/views/movies/search.html.erb
@@ -7,7 +7,7 @@
     </div>
   <% end %>
 </div>
-<h1>Requests from TMDB:</h1>
+<h1>Requests from TMDB (Click to add!):</h1>
 <% if @movies_api %>
 <div class="row">
   <% @movies_api.each do |movie| %>
