--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,8 +5,9 @@
     <p><%= link_to "Sign Up To Write a Review!", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
   </div>
 <% end %>
-<h2>Press like if you think the movie is a must see!</h2>
-<h3>Would you really say "What!? You've never seen that?"</h3>
+<div class="page-header">
+  <h1>Must see?  Click Like.<small>  Don't Agree?  Click Dislike</small></h1>
+</div>
 <div class="row">
   <% @movies.each do |movie| %>
     <div class="col-sm-6 col-md-3">
