Fix bug with star ratings

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -77,7 +77,8 @@
   $('.star-rating').raty({
   starOn: '<%= image_path('star-on.png') %>',
   starOff: '<%= image_path('star-off.png') %>',
-  starHalf: '<%= image_path('start-half.png') %>',
+  starHalf: '<%= image_path('star-half.png') %>',
+  showHalf: true,
   path: '',
   readOnly: true,
   score: function() {
