--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,6 +8,7 @@
 <div class="page-header">
   <h1>Must see?  Click Like.<small>  Don't Agree?  Click Dislike</small></h1>
 </div>
+<%= will_paginate %>
 <div class="row">
   <% @movies.each do |movie| %>
     <div class="col-sm-6 col-md-3">
@@ -29,3 +30,4 @@
     </div>
   <% end %>
 </div>
+<%= will_paginate %>
