--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
       <%= content_tag(:div, msg, class: "alert alert-info") %>
     <% end %>
     <%= yield %>
+    <p>This product uses the <%= link_to 'TMDb', 'https://www.themoviedb.org' %> API but is not endorsed or certified by TMDb.</p>
+    <%= image_tag image_path('tmdb.png') %>
   </div>
-  <p>*Some requests come from <%= link_to 'TMDB', 'https://www.themoviedb.org' %>
   <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
