Add meta keywords for SEO

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
+    <meta name="keywords" content="top movies, top rated movies, must see movies, best movies">
+    <meta name="description" content="MUST see movies voted by users!">
+    <meta name="author" content="Nate Dalo">
   </head>
   <body>
     <%= render 'layouts/header' %>
