Fix grammar on header

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end %>
 <div class="page-header">
-  <h1>Must see?  Click Like.<small>  Don't Agree?  Click Dislike</small></h1>
+  <h1>Must see?  Click Like.<small>  Don't Agree?  Click Dislike.</small></h1>
 </div>
 <%= will_paginate %>
 <div class="row">
