Add page for recent movies

--- a/app/views/movies/fresh.html.erb
+++ b/app/views/movies/fresh.html.erb
@@ -6,8 +6,7 @@
   </div>
 <% end %>
 <div class="page-header">
-  <h1>Must see?  Click Like.<small>  Don't Agree?  Click Dislike.</small></h1>
-  <%= link_to "Recently Added", fresh_path, class: "btn btn-primary" %>
+  <h1>Recently Added</small></h1>
 </div>
 <%= render partial: 'display' %>
 <script>
