--- a/app/views/movies/_display.html.erb
+++ b/app/views/movies/_display.html.erb
@@ -1,3 +1,4 @@
+<%= paginate @movies, theme: 'twitter-bootstrap-3' %>
 <div class="row">
   <% @movies.each do |movie| %>
     <% if movie.image_file_name %>
@@ -19,3 +20,4 @@
     <% end %>
   <% end %>
 </div>
+<%= paginate @movies, theme: 'twitter-bootstrap-3' %>
