Add styling to page header

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,3 +80,16 @@ a.alogin {
 a.alogin:hover {
   color:white;
 }
+
+.navbar-nav > li > a {
+  padding-top: 38px;
+  font-size: 2em;
+}
+
+form .btn {
+    margin-top: 25px;
+}
+
+form .form-control {
+  margin-top: 25px;
+}
