--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Never Scene", root_path, class: "navbar-brand" %>
+      <%= link_to image_tag("neverscene1.png"), root_path, class: "pull-left" %>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -23,7 +23,7 @@
       </ul>
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
         <p>
-          <%= text_field_tag :search, params[:search], class: "form-control" %>
+          <%= text_field_tag :search, params[:search], class: "form-control", value: "Search for a movie!", onfocus: "this.value=''" %>
           <%= submit_tag "Search", name:nil, class: "btn btn-default" %>
         </p>
       <% end %>
