Increase font size for nav and Jumbotron

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,7 +83,7 @@ a.alogin:hover {
 
 .navbar-nav > li > a {
   padding-top: 38px;
-  font-size: 1.5em;
+  font-size: 2.0em;
 }
 
 form .btn {
@@ -92,4 +92,8 @@ form .btn {
 
 form .form-control {
   margin-top: 25px;
+}
+
+.jumbotron > p {
+  font-size: 2em;
 }
